--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.0'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.liquibase.gradle' version '2.1.1'
 }
 
 group = 'root'
@@ -12,6 +13,20 @@ java {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
+
+liquibase {
+	activities {
+		main {
+			changeLogFile 'src/main/resources/db/changelog/db.changelog-master.yml'
+			url            'jdbc:h2:mem:auctiondb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE'
+			username       'user'
+			password       'password1234'
+			driver         'org.h2.Driver'
+		}
+	}
+}
+
+
 
 configurations {
 	compileOnly {
@@ -29,6 +44,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.liquibase:liquibase-core:4.31.0'
+	implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
