--- a/src/main/resources/db/changelog/v-1.0.0/create-bids-table.yml
+++ b/src/main/resources/db/changelog/v-1.0.0/create-bids-table.yml
@@ -3,7 +3,7 @@ databaseChangeLog:
       id: 2025-05-24-05
       author: ruslan
       labels: production
-      context: prod, dev
+      context: prod,dev
       comment: creating the bids table
       changes:
         - createTable:
@@ -17,7 +17,7 @@ databaseChangeLog:
                     primaryKey: true
                     primaryKeyName: pk_bids
               - column:
-                  name: bidder_id
+                  name: account_id
                   type: BIGINT
                   constraints:
                     nullable: false
@@ -40,11 +40,12 @@ databaseChangeLog:
 
         - addForeignKeyConstraint:
             baseTableName: bids
-            baseColumnNames: bidder_id
-            constraintName: fk_bids_bidder
-            referencedTableName: users
-            referencedColumnNames: user_id
+            baseColumnNames: account_id
+            constraintName: fk_bids_account
+            referencedTableName: accounts
+            referencedColumnNames: account_id
             onDelete: CASCADE
+
         - addForeignKeyConstraint:
             baseTableName: bids
             baseColumnNames: auction_id
