--- a/src/main/resources/db/changelog/v-1.0.0/create-accounts-table.yml
+++ b/src/main/resources/db/changelog/v-1.0.0/create-accounts-table.yml
@@ -32,6 +32,11 @@ databaseChangeLog:
                     unique: true
                     uniqueConstraintName: uq_accounts_email
               - column:
+                  name: username
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
                   name: password_hash
                   type: VARCHAR(255)
                   constraints:
