--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -37,10 +37,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'com.h2database:h2:2.3.232'
 	runtimeOnly 'com.h2database:h2:2.3.232'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.slf4j:slf4j-api:2.0.17'          // core API
+	runtimeOnly   'ch.qos.logback:logback-classic:1.5.18' // Boot’s default backend
 }
 
 tasks.named('test') {
